--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -543,7 +543,7 @@
                         return;
                     }
                     else {
-                        console.log('-------splitsville-----------');
+                        //console.log('-------splitsville-----------');
                     }
                 }
             }
