--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,11 +15,13 @@
 <section class="h-feed">
 	{{ $list := (where .Site.Pages.ByDate.Reverse "Type" "post") }}
 	{{ range (.Paginate (.Site.Pages.GroupByDate "2006")).PageGroups  }}
+        {{ range .Pages }}
         <article class="h-entry">
             {{ if .Title }}{{.Title}}{{end}}
 			<time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Date.Format "2006-01-02" }}</time>: <a href="{{ .Permalink }}" class="u-url p-name">{{ if .Title }}{{.Title}}{{else}}{{ .Date.Format "2006-01-02" }}{{end}}</a>
             {{.Content}}
         </article>
+        {{end}}
 	{{ end }}
 </section>
 {{ end }}
