--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,15 +11,40 @@
     {{end}}
 </nav>
 <section class="h-feed">
-	{{ $list := (where .Site.Pages.ByDate.Reverse "Type" "post") }}
-	{{ range (.Paginate (.Site.Pages.GroupByDate "2006")).PageGroups  }}
+    {{ $currentYear := now.Format "2006" }}
+    {{ $allPosts := where .Site.RegularPages "Section" "posts" }}
+    {{ $sortedPosts := sort $allPosts "Date" "desc" }}
+
+    {{ $currentYearPosts := where $sortedPosts "Date.Format \"2006\"" "eq" $currentYear }}
+    {{ if $currentYearPosts }}
+        <h2>{{ $currentYear }}</h2>
+        <ul>
+        {{ range $currentYearPosts }}
+            <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+        {{ end }}
+        </ul>
+    {{ end }}
+
+    <!-- Paginate older posts by year -->
+    {{ $olderPosts := where $sortedPosts "Date.Format \"2006\"" "lt" $currentYear }}
+    {{ $grouped := $olderPosts.GroupByDate "2006" }}
+    {{ $paginated := .Paginate $grouped 1 }} <!-- One year per page -->
+
+    {{ range $paginated.PageGroups }}
+        <h2>{{ .Key }}</h2>
+        <ul>
         {{ range .Pages }}
-        <article class="h-entry">
-            {{ if .Title }}{{.Title}}{{end}}
-			<time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Date.Format "2006-01-02" }}</time>: <a href="{{ .Permalink }}" class="u-url p-name">{{ if .Title }}{{.Title}}{{else}}{{ .Date.Format "2006-01-02" }}{{end}}</a>
-            {{.Content}}
-        </article>
-        {{end}}
-	{{ end }}
+            <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+        {{ end }}
+        </ul>
+    {{ end }}
+
+    <!-- Pagination Controls -->
+    {{ if .Paginator.HasPrev }}
+        <a href="{{ .Paginator.Prev.URL }}">Previous Year</a>
+    {{ end }}
+    {{ if .Paginator.HasNext }}
+        <a href="{{ .Paginator.Next.URL }}">Next Year</a>
+    {{ end }}
 </section>
 {{ end }}
