--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,10 +8,10 @@
     {{ end }}
 </nav>
 <section class="h-feed">
-    {{ $grouped := $posts.GroupByDate "2006" }}
-    {{ $paginated := .Paginate $grouped 1 }}
-    {{ range $paginated.PageGroups }}
-        {{ range .Pages }}
+    {{ $recentPosts := where $posts | sort "Date" "desc" }}
+    {{ if $recentPosts }}
+        {{ $mostRecentYear := $recentPosts.First.Date.Format "2006" }}
+        {{ $postsThisYear := where $recentPosts "Date.Format \"2006\"" "eq" $mostRecentYear }}
         <article class="h-entry">
             <h1 class="p-name"><a class="u-url" href="{{ .Permalink }}">{{ if .Title }}{{ .Title }}{{ else }}{{ .Date.Format "2 Jan 06" }}{{ end }}</a></h1>
             <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
@@ -19,7 +19,6 @@
             </time>
             {{ .Content }}
         </article>
-        {{ end }}
     {{ end }}
 </section>
 {{ end }}
