--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,17 +8,18 @@
     {{ end }}
 </nav>
 <section class="h-feed">
-    {{ $recentPosts := where $posts | sort "Date" "desc" }}
-    {{ if $recentPosts }}
-        {{ $mostRecentYear := $recentPosts.First.Date.Format "2006" }}
-        {{ $postsThisYear := where $recentPosts "Date.Format \"2006\"" "eq" $mostRecentYear }}
-        <article class="h-entry">
-            <h1 class="p-name"><a class="u-url" href="{{ .Permalink }}">{{ if .Title }}{{ .Title }}{{ else }}{{ .Date.Format "2 Jan 06" }}{{ end }}</a></h1>
-            <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
-                {{ .Date.Format "02 Jan 2006" }}
-            </time>
-            {{ .Content }}
-        </article>
+    {{ if $posts }}
+        {{ $mostRecentYear := $posts.First.Date.Format "2006" }}
+        {{ $postsThisYear := where $posts "Date.Format \"2006\"" "eq" $mostRecentYear }}
+        {{ range $postsThisYear }}
+            <article class="h-entry">
+                <h1 class="p-name"><a class="u-url" href="{{ .Permalink }}">{{ if .Title }}{{ .Title }}{{ else }}{{ .Date.Format "2 Jan 06" }}{{ end }}</a></h1>
+                <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
+                    {{ .Date.Format "02 Jan 2006" }}
+                </time>
+                {{ .Content }}
+            </article>
+        {{ end }}
     {{ end }}
 </section>
 {{ end }}
