--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <nav class="hide-sm-flex top-left">
     <p><b>Blog Editions</b></p>
-    {{ $posts := where .Site.RegularPages "Type" "post" }}
+    {{ $posts := where .Site.RegularPages "Type" "post" | sort "Date" "desc" }}
     {{ $years := $posts.GroupByDate "2006" }}
     {{ range $years }}
         <a href="archive#{{ .Key }}">{{ .Key }}</a>
