--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,9 +10,9 @@
 <section class="h-feed">
     {{ $withDate := where $posts "Date" "!=" nil }}
     {{ $sorted := sort $withDate "Date" "desc" }}
-    {{ if $posts }}
-        {{ $mostRecentYear := $posts.First.Date.Format "2006" }}
-        {{ $postsThisYear := where $posts "Date.Format \"2006\"" "eq" $mostRecentYear }}
+    {{ if $sorted }}
+        {{ $mostRecentYear := $sorted.First.Date.Format "2006" }}
+        {{ $postsThisYear := where $sorted "Date.Format \"2006\"" "eq" $mostRecentYear }}
         {{ range $postsThisYear }}
             <article class="h-entry">
                 <h1 class="p-name"><a class="u-url" href="{{ .Permalink }}">{{ if .Title }}{{ .Title }}{{ else }}{{ .Date.Format "2 Jan 06" }}{{ end }}</a></h1>
