--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,15 +3,18 @@
     <p><b>Blog Editions</b></p>
     {{ $posts := where .Site.Pages "Type" "post" }}
     {{ $years := $posts.GroupByDate "2006" }}
-    {{ range $years }}
-        <a href="archive#{{ .Key }}">{{ .Key }}</a>
+    {{ $mostRecentYear := 0 }}
+    {{ range $index, $element := $years }}
+        {{ if eq $index 0 }}
+            {{ $mostRecentYear := $element.Key }}
+        {{ end }}
+        <a href="archive#{{ $element.Key }}">{{ $element.Key }}</a>
     {{ end }}
 </nav>
 <section class="h-feed">
     {{ $withDate := where $posts "Date" "!=" nil }}
     {{ $sorted := sort $withDate "Date" "desc" }}
     {{ if $sorted }}
-        {{ $mostRecentYear := ( $sorted | first 1 ).First.Date.Format "2006" }}
         {{ $postsThisYear := where $sorted "Date.Format \"2006\"" "eq" $mostRecentYear }}
         {{ range $postsThisYear }}
             <article class="h-entry">
