--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,13 +14,13 @@
 <section class="h-feed">
     {{ range where .Site.Pages "Type" "post" }}
         {{ if eq (.Date.Format "2006") ($.Scratch.Get "mostRecentYear") }}
-        <div class="h-entry">
+        <article class="h-entry">
             <h1 class="p-name"><a class="u-url" href="{{ .Permalink }}">{{ if .Title }}{{ .Title }}{{ else }}{{ .Date.Format "2 Jan 06" }}{{ end }}</a></h1>
             <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
                 {{ .Date.Format "02 Jan 2006" }}
             </time>
             {{ .Content }}
-        </div>
+        </article>
         {{ end }}
     {{ end }}
 </section>
