--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,10 +15,26 @@
     {{ range where .Site.Pages "Type" "post" }}
         {{ if eq (.Date.Format "2006") ($.Scratch.Get "mostRecentYear") }}
         <article class="h-entry">
-            <h1 class="p-name"><a class="u-url" href="{{ .Permalink }}">{{ if .Title }}{{ .Title }}{{ else }}{{ .Date.Format "2 Jan 06" }}{{ end }}</a></h1>
-            <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
-                {{ .Date.Format "02 Jan 2006" }}
-            </time>
+            {{ if .Title }}
+                <div>
+                    <h1 class="p-name">
+                        <a class="u-url" href="{{ .Permalink }}">{{ .Title }}</a>
+                    </h1>
+                    <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
+                        {{ .Date.Format "02 Jan 2006" }}
+                    </time>
+                </div>
+            {{ else }}
+                <div>
+                    <h1 class="p-name">
+                        <a class="u-url" href="{{ .Permalink }}">
+                            <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
+                                {{ .Date.Format "02 Jan 2006" }}
+                            </time>
+                        </a>
+                    </h1>
+                </div>
+            {{ end }}
             {{ .Content }}
         </article>
         {{ end }}
