Begin photos page

--- a/layouts/_default/list.photoshtml.html
+++ b/layouts/_default/list.photoshtml.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
 <section class="h-feed">
-    {{ range where .Site.Pages "Type" "post" }}
+    {{- $list := where .Site.Pages ".Params.photos" "!=" nil -}}
+	{{- $len := (len $list) -}}
+	{{ range $index, $value := $list }}
        <article class="h-entry {{ .Date.Format "2006" }}">
             {{ if .Title }}
                 <div>
