--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -274,6 +274,20 @@
             <b><a href="https://heyloura.com">heyloura.com</a></b><br/>
             Click to open book or use arrow keys <span class="ctrl">↑</span><span class="ctrl">↓</span> to flip pages
         </p>
+    <nav class="hide-sm-flex top-left">
+        <p><b>Pages</b></p>
+        <a href="/photos/">photos</a>
+        <p><b>Blog Editions</b></p>
+        {{ $posts := where .Site.Pages "Type" "post" }}
+        {{ $years := $posts.GroupByDate "2006" }}
+        {{ $.Scratch.Set "mostRecentYear" 0 }}
+        {{ range $index, $element := $years }}
+            {{ if eq $index 0 }}
+                {{ $.Scratch.Set "mostRecentYear" $element.Key }}
+            {{ end }}
+            <a href="/archive/?year={{ $element.Key }}">{{ $element.Key }}</a>
+        {{ end }}
+    </nav>
     <nav class="hide-sm-flex top-right">
         <p><b>Topics</b></p>
         {{ $list := ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
