more updates and category pages

--- a/layouts/_default/list.archivehtml.html
+++ b/layouts/_default/list.archivehtml.html
@@ -22,7 +22,11 @@
                     </h1>
                 </div>
             {{ end }}
-            {{ .Content }}
+            {{ if .Title }}
+                {{ .Content | safeHTML | strings.Truncate 900 }}
+            {{ else }}
+                {{ .Content }}
+            {{ end }}
         </article>
     {{ end }}
 </section>
