--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,9 +2,9 @@
 <section class="h-feed">
     {{ range where .Site.Pages "Type" "post" }}
         {{ $firstImage := "" }}
-        {{ $matches := findRE "<img[^>]+src=[\"']([^\"']+)[\"'][^>]*>" .Content 1 }}
+        {{ $matches := findRE "<img[^>]+src=\\\\"([^\\\\"]+)\\\\"" .Content 1 }}
         {{ if $matches }}
-            {{ $firstImage = index (findRE "src=[\\\"]([^\\\"]+)[\\\"]" $matches._ 1 1) 0 | replaceRE "^src=[\\\"]|\\[\\\"]$" "" }}
+            {{ $firstImage = index $matches 0 | replaceRE "^<img[^>]+src=\\\\\"|\\\\\".*$" "" }}
             <style>
                 .cover {
                     background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%),
