--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,16 +1,20 @@
 {{ define "main" }}
 <section class="h-feed">
     {{ range where .Site.Pages "Type" "post" }}
-        {{ $matches := findRE "src=\\\"([^\\\"]+)\\\"" .Content 1 }}
+        {{ $firstImage := "" }}
+        {{ $matches := findRE "<img[^>]+src=\\\"([^\\\"]+)\\\"" .Content 1 }}
         {{ if $matches }}
-            {{ $src := index $matches 0 | replaceRE "^src=\\\"|\\\"$" "" }}
-                <style>
-                    .cover {
-                        background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%),
-                            hsl(231, 32%, 29%) url("{{ $src }}") 50% / cover;
-                    }
-                </style>
-            {{ break }}
+            {{ $firstImage = index (findRE "^[^"]+" (index $matches 0) 1) 0 }}
+        {{ end }}
+
+        {{ if $firstImage }}
+            <style>
+                .cover {
+                    background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%),
+                        hsl(231, 32%, 29%) url("{{ $firstImage }}") 50% / cover;
+                }
+            </style>
+        {{ break }}
         {{ end }}
         {{ if eq (.Date.Format "2006") ($.Scratch.Get "mostRecentYear") }}
         <article class="h-entry">
