--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,21 +1,22 @@
 {{ define "main" }}
 <section class="h-feed">
-    {{ range where .Site.Pages "Type" "post" }}
-        {{ $firstImage := "" }}
-        {{ $matches := findRE "<img[^>]+src=\\\"([^\\\"]+)\\\"" .Content 1 }}
-        {{ if $matches }}
-            {{ $firstImage = index (findRE "^[^"]+" (index $matches 0) 1) 0 }}
-        {{ end }}
-
-        {{ if $firstImage }}
+    {{- $list := where .Site.Pages ".Params.photos" "!=" nil -}}
+	{{- $len := (len $list) -}}
+	{{ range $index, $value := $list }}
+        {{ if eq $index 0 }}
+            {{ range first 1 .Params.photos }}
             <style>
                 .cover {
                     background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%),
-                        hsl(231, 32%, 29%) url("{{ $firstImage }}") 50% / cover;
+                        hsl(231, 32%, 29%) url("{{ . }}") 50% / cover;
                 }
             </style>
-        {{ break }}
+            {{ end }}
         {{ end }}
+	{{ end }}
+
+    
+    {{ range where .Site.Pages "Type" "post" }}
         {{ if eq (.Date.Format "2006") ($.Scratch.Get "mostRecentYear") }}
         <article class="h-entry">
             {{ if .Title }}
