--- a/layouts/_default/list.archivehtml.html
+++ b/layouts/_default/list.archivehtml.html
@@ -1,5 +1,18 @@
 {{ define "main" }}
 <section class="h-feed">
+    {{- $list := where .Site.Pages ".Params.photos" "!=" nil -}}
+	{{ range $index, $value := $list }}
+        {{ if eq $index 0 }}
+            {{ range first 1 .Params.photos }}
+            <style>
+                .cover {
+                    background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%),
+                        hsl(231, 32%, 29%) url("{{ . }}") 50% / cover;
+                }
+            </style>
+            {{ end }}
+        {{ end }}
+	{{ end }}
     {{ range where .Site.Pages "Type" "post" }}
        <article class="h-entry {{ .Date.Format "2006" }}">
             {{ if .Title }}
