--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -614,7 +614,7 @@
                         max-height: min(525px, 80vh) !important;
                         max-width: min(450px, 100%)!important;
                     }
-                    img {    
+                    img, video {    
                         height: unset;
                         width: 100%;
                         max-width: min(450px, 100%);
