--- a/layouts/_default/list.archivehtml.html
+++ b/layouts/_default/list.archivehtml.html
@@ -16,17 +16,21 @@
     {{ range where .Site.Pages "Type" "post" }}
        <article class="h-entry {{ .Date.Format "2006" }}">
             {{ if .Title }}
-                <div>
+                <div class="post">
                     <h1 class="p-name">
                         <a class="u-url" href="{{ .Permalink }}">{{ .Title }}</a>
                     </h1>
                     <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
                         {{ .Date.Format "02 Jan 2006" }}
                     </time>
-                    {{ .Content | safeHTML | strings.Truncate 300 }}
+                    {{ $truncatedContent := .Content | safeHTML | strings.Truncate 300 }}
+                    {{ $truncatedContent }}
+                    {{ if .Truncated }}
+                        <a href="{{ .Permalink }}" class="read-more">Read more</a>
+                    {{ end }}
                 </div>
             {{ else }}
-                <div>
+                <div class="post">
                     <h1 class="p-name">
                         <a class="u-url" href="{{ .Permalink }}">
                             <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
