--- a/layouts/_default/list.photoshtml.html
+++ b/layouts/_default/list.photoshtml.html
@@ -18,16 +18,20 @@
 	{{ range $index, $value := $list }}
        <article class="h-entry {{ .Date.Format "2006" }}">
             {{ if .Title }}
-                <div>
+                <div class="post">
                     <h1 class="p-name">
                         <a class="u-url" href="{{ .Permalink }}">{{ .Title }}</a>
                     </h1>
                     <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
                         {{ .Date.Format "02 Jan 2006" }}
                     </time>
+                    {{ $truncatedContent }}
+                    {{ if .Truncated }}
+                        <a href="{{ .Permalink }}" class="read-more">Read more</a>
+                    {{ end }}
                 </div>
             {{ else }}
-                <div>
+                <div class="post">
                     <h1 class="p-name">
                         <a class="u-url" href="{{ .Permalink }}">
                             <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
@@ -35,12 +39,8 @@
                             </time>
                         </a>
                     </h1>
+                    {{ .Content }}
                 </div>
-            {{ end }}
-            {{ if .Title }}
-                {{ .Content | safeHTML | strings.Truncate 900 }}
-            {{ else }}
-                {{ .Content }}
             {{ end }}
         </article>
     {{ end }}
