--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -214,15 +214,22 @@
             border-radius: .5em .1em .1em .5em;
             }
 
-            .cover {
-                background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%),
-                    hsl(231, 32%, 29%) url("https://cdn.uploads.micro.blog/88328/2026/img-20260119-091519.jpg") 50% / cover;
-                color: hsl(200 30% 98%);
-                display: flex;
-                flex-flow: column wrap;
-                justify-content: space-between;
-            }
-
+            {{- $list := where .Site.Pages.ByDate.Reverse ".Params.photos" "!=" nil -}}
+            {{ range $index, $value := $list }}
+                {{ if eq $index 0 }}
+                    {{ range first 1 .Params.photos }}
+                    .cover {
+                            background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%),
+                                hsl(231, 32%, 29%) url("https://cdn.uploads.micro.blog/88328/2026/img-20260119-091519.jpg") 50% / cover;
+                            color: hsl(200 30% 98%);
+                            display: flex;
+                            flex-flow: column wrap;
+                            justify-content: space-between;
+                        }
+                    {{ end }}
+                {{ end }}
+            {{ end }}
+            
             .cover p {
                 text-shadow: 0 2px 3px canvas;
             }
