--- a/layouts/_default/list.photoshtml.html
+++ b/layouts/_default/list.photoshtml.html
@@ -25,6 +25,7 @@
                     <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
                         {{ .Date.Format "02 Jan 2006" }}
                     </time>
+                    {{ $truncatedContent := .Content | safeHTML | strings.Truncate 300 }}
                     {{ $truncatedContent }}
                     {{ if .Truncated }}
                         <a href="{{ .Permalink }}" class="read-more">Read more</a>
