--- a/layouts/_default/list.photoshtml.html
+++ b/layouts/_default/list.photoshtml.html
@@ -20,7 +20,7 @@
             {{ if .Title }}
                 <div class="post">
                     <h1 class="p-name">
-                        <a class="u-url" href="{{ .Permalink }}">{{ .Title }}</a>
+                        <a class="u-url" href="{{ .Permalink }}#1">{{ .Title }}</a>
                     </h1>
                     <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
                         {{ .Date.Format "02 Jan 2006" }}
@@ -28,13 +28,13 @@
                     {{ $truncatedContent := .Content | safeHTML | strings.Truncate 300 }}
                     {{ $truncatedContent }}
                     {{ if .Truncated }}
-                        <a href="{{ .Permalink }}" class="read-more">Read more</a>
+                        <a href="{{ .Permalink }}#1" class="read-more">Read more</a>
                     {{ end }}
                 </div>
             {{ else }}
                 <div class="post">
                     <h1 class="p-name">
-                        <a class="u-url" href="{{ .Permalink }}">
+                        <a class="u-url" href="{{ .Permalink }}#1">
                             <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
                                 {{ .Date.Format "02 Jan 2006" }}
                             </time>
