--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -351,6 +351,10 @@
     }
     
     @media screen and (min-width: 1023px) {
+        .post {
+            overflow: hidden;
+            max-height: 450px;
+        }
         body {
             perspective: 2000px;
         }
