--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -105,13 +105,13 @@
                 font-size: 14px;
             }
 
-            .book {
+            .flip-book {
                 position: relative;
                 display: flex;
                 margin: auto;
                 /* width: 60cqmin; */
                 width: min(450px, 60cqmin);
-                /*1* let pointer event go trough pages of lower Z than .book */
+                /*1* let pointer event go trough pages of lower Z than .flip-book */
                 pointer-events: none;
                 transform-style: preserve-3d;
                 transition: translate 1s;
@@ -160,7 +160,7 @@
 
 
             /* That's it. Your FlipBook customization styles: */
-            .book {
+            .flip-book {
             counter-reset: page -1;
             & a {
                 color: inherit;
@@ -265,7 +265,7 @@
         }
         @media screen and (min-width: 1499px) 
         {
-            .book { 
+            .flip-book { 
                 scale: 1.3;
                 translate: calc(min(var(--c), 1) * 65%) 0%;
             }
@@ -358,7 +358,7 @@
         body {
             perspective: 2000px;
         }
-        .page, .book {
+        .page, .flip-book {
             /* height: 90vh;
             max-height: 90vh; */
             height: min(600px, 85vh);
@@ -435,7 +435,7 @@
     if(localStorage.getItem('bookview') && localStorage.getItem('bookview') != "true") {
         document.getElementById('hideBookView').remove();
         document.getElementById("loading").remove();
-        document.querySelectorAll(".bookStyles").forEach(el => el.remove());
+        document.querySelectorAll(".flip-bookStyles").forEach(el => el.remove());
         document.body.insertAdjacentHTML('afterbegin',`
         <style>
             body
@@ -606,7 +606,7 @@
         document.querySelectorAll("article > *").forEach(el => el.remove());
         document.querySelectorAll("article").forEach(el => el.remove());
         document.body.insertAdjacentHTML('beforeend',`
-            <div class="book">
+            <div class="flip-book">
                 <div class="page">
                     <div class="front cover">
                     <h1>{{ if .Title }}{{ strings.FirstUpper .Title }}{{else}}Hey Loura{{ end }}</h1>
@@ -673,23 +673,23 @@
             });
         };
 
-        document.querySelectorAll(".book").forEach(flipBook);
+        document.querySelectorAll(".flip-book").forEach(flipBook);
     }
 
     document.addEventListener('keydown', function(event) {
         if (event.key === 'ArrowUp') {
             const curr = window.location.hash ? Math.max(parseInt(window.location.hash.replace('#','')) - 1, 0) : 0;
-            document.querySelector(".book").style.setProperty("--c", curr);
+            document.querySelector(".flip-book").style.setProperty("--c", curr);
             window.location.hash = curr;
             console.log('Up arrow key pressed!');
         } else if (event.key === 'ArrowDown') {
-            const curr =  window.location.hash ? Math.min(parseInt(window.location.hash.replace('#','')) + 1, document.querySelector(".book").querySelectorAll(".page").length) : 0;
+            const curr =  window.location.hash ? Math.min(parseInt(window.location.hash.replace('#','')) + 1, document.querySelector(".flip-book").querySelectorAll(".page").length) : 0;
             window.location.hash = curr;
             console.log('Down arrow key pressed!');
         }
     });
     window.addEventListener("hashchange", () => {
-        document.querySelector(".book").style.setProperty("--c", parseInt(window.location.hash.replace('#','')));
+        document.querySelector(".flip-book").style.setProperty("--c", parseInt(window.location.hash.replace('#','')));
     });
 </script>
 </body>
