--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -288,7 +288,7 @@
             Click to open book or use arrow keys <span class="ctrl">↑</span><span class="ctrl">↓</span> to flip pages
         </p>
     <nav class="hide-sm-flex top-left">
-        <p><b>Pages</b></p>
+        <a href="/photos/">photos</a>
         <a href="/photos/">photos</a>
         <p><b>Blog Editions</b></p>
         {{ $posts := where .Site.Pages "Type" "post" }}
